Changes in version 0.6.1:
  o Fixed a bug in Delta starting values
  o Fixed a bug causing modelsearch to occasionally crash
  o Added function 'fullFIML' to use true FIML computing the likelihood per row

Changes in version 0.6:
  o The 'dlvm1' model family now also returns the implied latent variance-covarriance matrix as 'sigma_eta_within'
      o The latent lag-1 matrix is also returned as 'sigma_eta_within_lag1'
  o The dlvm1 model family now no longer requires a 'lambda' matrix to be specified (will default to a panelvar model)
  o Most model families now support the 'standardized' argument, which can be set to 'z' for z-scores (helps convergence) or 'quantile' for a semiparametric transformation
  o Added the ml_lvm family for two-level random intercept latent variable models
  o Added the simplestructure function to easily make a lambda matrix
  o addalpha in modelsearch now works as expected
  o addalpha and prunealpha now default to 0.01 in 'modelsearch'
  o recursive now defaults to FALSE in 'prune'

Changes in version 0.5.1:
  o Fixed a bug with responses being missing when summary statistics are used in Ising()
  o Fixed a bug with covtype sometimes being set to UB when corinput = TRUE
  o Added DOI to description field

Changes in version 0.5.0:
  o The Ising model is now supported (only ML estimation) through the Ising() model function
  o Added the covtype option to several models, controlling if maximum likelihood or unbiased estimates are used for the input covariances
  o Added the function 'covML' for maximum likelihood covariance estimates

Changes in version 0.4.1:
  o Small fix for CRAN checks

Changes in version 0.4:
  o type = "cor" is now supported in varcov, with rho representing the correlations and SD the diagonal standard deviations matrix.
      o The 'corr' function is now implemented as shorthand for varcov(..., type = "cor")